@@ -1,5 +1,11 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.31.6
+	Martin Väth <martin at mvath.de>:
+	- Fix new memory leaks
+	- Manually destroy root_node; do not do this in FormatParser.
+	  This hopefully fixes the segfault of bug 571108
+
 *eix-0.31.5
 	Martin Väth <martin at mvath.de>:
 	- Adapt version wildcard matching to pms and portage implementation
